# strategic-lakehouse

./: .gitignore  README.md  pyproject.toml
notebooks/: exploration.ipynb
src/: api.py  bronze.py  gold.py  pipeline.py  silver.py
static/: index.html
