[project]
name = "strategic-lakehouse"
version = "0.1.0"
description = "POC Lakehouse Bronze/Silver/Gold pour GlobalTrade Solutions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2",
    "duckdb>=1.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pyarrow>=17.0",
    "jupyter>=1.0",
]
